[tool.poetry]
name = "sophia-optimizer"
version = "0.2.5"
description = "Sophia Optimizer ULTRA FAST"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "APACHE"
readme = "README.md"
homepage = "https://github.com/kyegomez/Sophia"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]
packages = [{ include = "sophia" }]


[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
datasets = "*"
transformers = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
